==> wuyuanfu240697738/Science_Embeded/Mid_Drivers/Micrium/Software/uC-Probe/Target/Communication/Generic/RS-232/Ports/NXP/LPC24xx/probe_rs232c.c <==
#include  <probe_com.h>
#include  <probe_rs232.h>
#define  U0_BASE                ((CPU_INT32U)0xE000C000)
#define  U1_BASE                ((CPU_INT32U)0xE0010000)
#define  U2_BASE                ((CPU_INT32U)0xE0078000)
#define  U3_BASE                ((CPU_INT32U)0xE007C000)
#define  VIC_BASE               ((CPU_INT32U)0xFFFFF000)
#define  PINSEL_BASE            ((CPU_INT32U)0xE002C000)
#define  VIC_UART0                                         6
#define  VIC_UART1                                         7
#define  VIC_UART2                                        28
#define  VIC_UART3                                        29
#define  PCLK_UART0                                        3
#define  PCLK_UART1                                        4
#define  PCLK_UART2                                       24
#define  PCLK_UART3                                       25
#define  PCUART0                                  DEF_BIT_03
#define  PCUART1                                  DEF_BIT_04
#define  PCUART2                                  DEF_BIT_24
#define  PCUART3                                  DEF_BIT_25
#define  PCONP              (*(volatile CPU_INT32U *)(0xE01FC0C4))
#define  U0RBR              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0000))
#define  U0THR              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0000))
#define  U0DLL              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0000))
#define  U0DLM              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0004))

void  ProbeRS232_InitTarget (CPU_INT32U baud_rate)
{
    CPU_INT16U  div;
    CPU_INT08U  divlo;
    CPU_INT08U  divhi;
    CPU_INT32U  pinsel;
    CPU_INT32U  pclk_freq;


#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    PCONP    |= PCUART0;                                        /* Enable UART0 peripheral.                                 */

                                                                /* --------------- COMPUTE DIVISOR BAUD RATE -------------- */
    pclk_freq =  BSP_CPU_PclkFreq(PCLK_UART0);                  /* Get the CPU clock frequency                              */
    div       = (CPU_INT16U)(((2 * pclk_freq / 16 / baud_rate) + 1) / 2);
    divlo     =  div & 0x00FF;                                  /* Split divisor into LOW and HIGH bytes                    */
    divhi     = (div >> 8) & 0x00FF;

                                                                /* ------------------- ENABLE UART0 I/Os ------------------ */
                                                                /* (1) P0[2]  = Function 01b                                */
                                                                /* (2) P0[3]  = Function 01b                                */
    pinsel    = PINSEL0;
    pinsel   &= 0xFFFFFF0F;
    pinsel   |= 0x00000050;
    PINSEL0   = pinsel;

                                                                /* --------------------- SETUP UART0 ---------------------- */
    U0LCR     = DEF_BIT_07;                                     /* Set divisor access bit                                   */
    U0DLL     = divlo;                                          /* Load divisor                                             */
    U0DLM     = divhi;
    U0LCR     = 0x03;                                           /* Set line control register (Bit 8 is 0)                   */
    U0IER     = 0x00;                                           /* Disable both Rx and Tx interrupts                        */
    U0FDR     = 0x00;                                           /* Disable fractional dividers                              */
    U0FCR     = 0x01;                                           /* Enable FIFO, flush Rx & Tx                               */

                                                                /* --------------- INITIALIZE VIC FOR UART0 --------------- */
    VICIntSelect           &= ~(1 << VIC_UART0);                        /* Enable interrupts                                */
    VICVectAddr(VIC_UART0)  = (CPU_INT32U)ProbeRS232_RxTxISRHandler;    /* Set the vector address                           */
    VICVectCntl(VIC_UART0)  =  14;
    VICIntEnable            =  (1 << VIC_UART0);                        /* Enable Interrupts                                */
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    PCONP    |= PCUART1;                                        /* Enable UART1 peripheral.                                 */

                                                                /* --------------- COMPUTE DIVISOR BAUD RATE -------------- */
    pclk_freq =  BSP_CPU_PclkFreq(PCLK_UART1);                  /* Get the CPU clock frequency                              */
    div       = (CPU_INT16U)(((2 * pclk_freq / 16 / baud_rate) + 1) / 2);
    divlo     =  div & 0x00FF;                                  /* Split divisor into LOW and HIGH bytes                    */
    divhi     = (div >> 8) & 0x00FF;

                                                                /* ------------------- ENABLE UART1 I/Os ------------------ */
#ifdef  PROBE_RS232_LPC24XX_UART1_P3_16_17
                                                                /* (1) P3[16] = Function 11b                                */
                                                                /* (2) P3[17] = Function 11b                                */
    pinsel    = PINSEL7;
    pinsel   &= 0xFFFFFFF0;
    pinsel   |= 0x0000000F;
    PINSEL7   = pinsel;

#else
                                                                /* (1) P0[15] = Function 01b                                */
                                                                /* (2) P0[16] = Function 01b                                */
    pinsel    = PINSEL0;
    pinsel   &= 0x3FFFFFFF;
    pinsel   |= 0x40000000;
    PINSEL0   = pinsel;

    pinsel    = PINSEL1;
    pinsel   &= 0xFFFFFFFC;
    pinsel   |= 0x00000001;
    PINSEL1   = pinsel;
#endif


                                                                /* --------------------- SETUP UART1 ---------------------- */
    U1LCR     = DEF_BIT_07;                                     /* Set divisor access bit                                   */
    U1DLL     = divlo;                                          /* Load divisor                                             */
    U1DLM     = divhi;
    U1LCR     = 0x03;                                           /* 8 Bits, 1 Stop, No Parity                                */
    U1IER     = 0x00;                                           /* Disable both Rx and Tx interrupts                        */
    U1FDR     = 0x00;                                           /* Disable fractional dividers                              */    
    U1FCR     = 0x01;                                           /* Enable FIFO, flush Rx & Tx                               */

                                                                /* --------------- INITIALIZE VIC FOR UART1 --------------- */
    VICIntSelect           &= ~(1 << VIC_UART1);                        /* Enable interrupts                                */
    VICVectAddr(VIC_UART1)  = (CPU_INT32U)ProbeRS232_RxTxISRHandler;    /* Set the vector address                           */
    VICVectCntl(VIC_UART1)  =  14;
    VICIntEnable            =  (1 << VIC_UART1);                        /* Enable Interrupts                                */
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    PCONP    |= PCUART2;                                        /* Enable UART2 peripheral.                                 */

                                                                /* --------------- COMPUTE DIVISOR BAUD RATE -------------- */
    pclk_freq =  BSP_CPU_PclkFreq(PCLK_UART2);                  /* Get the CPU clock frequency                              */
    div       = (CPU_INT16U)(((2 * pclk_freq / 16 / baud_rate) + 1) / 2);
    divlo     =  div & 0x00FF;                                  /* Split divisor into LOW and HIGH bytes                    */
    divhi     = (div >> 8) & 0x00FF;

                                                                /* ------------------- ENABLE UART2 I/Os ------------------ */
                                                                /* (1) P0[10] = Function 01b                                */
                                                                /* (2) P0[11] = Function 01b                                */
    pinsel    = PINSEL0;
    pinsel   &= 0xFF0FFFFF;
    pinsel   |= 0x00500000;
    PINSEL0   = pinsel;

                                                                /* --------------------- SETUP UART2 ---------------------- */
    U2LCR     = DEF_BIT_07;                                     /* Set divisor access bit                                   */
    U2DLL     = divlo;                                          /* Load divisor                                             */
    U2DLM     = divhi;
    U2LCR     = 0x03;                                           /* 8 Bits, 1 Stop, No Parity                                */
    U2IER     = 0x00;                                           /* Disable both Rx and Tx interrupts                        */
    U2FDR     = 0x00;                                           /* Disable fractional dividers                              */    
    U2FCR     = 0x01;                                           /* Enable FIFO, flush Rx & Tx                               */

                                                                /* --------------- INITIALIZE VIC FOR UART2 --------------- */
    VICIntSelect           &= ~(1 << VIC_UART2);                        /* Enable interrupts                                */
    VICVectAddr(VIC_UART2)  = (CPU_INT32U)ProbeRS232_RxTxISRHandler;    /* Set the vector address                           */
    VICVectCntl(VIC_UART2)  =  14;
    VICIntEnable            =  (1 << VIC_UART2);                        /* Enable Interrupts                                */
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    PCONP    |= PCUART3;                                        /* Enable UART3 peripheral.                                 */

                                                                /* --------------- COMPUTE DIVISOR BAUD RATE -------------- */
    pclk_freq =  BSP_CPU_PclkFreq(PCLK_UART3);                  /* Get the CPU clock frequency                              */
    div       = (CPU_INT16U)(((2 * pclk_freq / 16 / baud_rate) + 1) / 2);
    divlo     =  div & 0x00FF;                                  /* Split divisor into LOW and HIGH bytes                    */
    divhi     = (div >> 8) & 0x00FF;

                                                                /* ------------------- ENABLE UART3 I/Os ------------------ */
                                                                /* (1) P0[0]  = Function 11b                                */
                                                                /* (2) P0[1]  = Function 11b                                */
    pinsel    = PINSEL0;
    pinsel   &= 0xFFFFFFF0;
    pinsel   |= 0x0000000F;
    PINSEL0   = pinsel;

                                                                /* --------------------- SETUP UART3 ---------------------- */
    U3LCR     = DEF_BIT_07;                                     /* Set divisor access bit                                   */
    U3DLL     = divlo;                                          /* Load divisor                                             */
    U3DLM     = divhi;
    U3LCR     = 0x03;                                           /* 8 Bits, 1 Stop, No Parity                                */
    U3IER     = 0x00;                                           /* Disable both Rx and Tx interrupts                        */
    U3FCR     = 0x01;                                           /* Enable FIFO, flush Rx & Tx                               */

                                                                /* --------------- INITIALIZE VIC FOR UART3 --------------- */
    VICIntSelect           &= ~(1 << VIC_UART3);                        /* Enable interrupts                                */
    VICVectAddr(VIC_UART3)  = (CPU_INT32U)ProbeRS232_RxTxISRHandler;    /* Set the vector address                           */
    VICVectCntl(VIC_UART3)  =  14;
    VICIntEnable            =  (1 << VIC_UART3);                        /* Enable Interrupts                                */
#endif
}

void  ProbeRS232_RxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER &= ~DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER &= ~DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    U2IER &= ~DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    U3IER &= ~DEF_BIT_00;
#endif
}

void  ProbeRS232_RxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER |= DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER |= DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    U2IER |= DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    U3IER |= DEF_BIT_00;
#endif
}

void  ProbeRS232_Tx1 (CPU_INT08U c)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0THR = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1THR = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    U2THR = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    U3THR = c;
#endif
}

void  ProbeRS232_TxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER &= ~DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER &= ~DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    U2IER &= ~DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    U3IER &= ~DEF_BIT_01;
#endif
}

void  ProbeRS232_TxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER |= DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER |= DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    U2IER |= DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    U3IER |= DEF_BIT_01;
#endif
}
