==> wuyuanfu240697738/Science_Embeded/Mid_Drivers/Micrium/Software/uC-Probe/Target/Communication/Generic/RS-232/Ports/Atmel/ATmega128/IAR/probe_rs232c.c <==
#include <includes.h>
#define  BIT0    0x01
#define  BIT1    0x02
#define  BIT2    0x04
#define  BIT3    0x08
#define  BIT4    0x10
#define  BIT5    0x20
#define  BIT6    0x40
#define  BIT7    0x80

void  ProbeRS232_InitTarget (CPU_INT32U baud_rate)
{
    INT16U  divisor;
    INT16U  temp;


                                                     /* -------- INITIALIZE THE SERIAL PORT ---------- */
                                                     /* Compute baud rate divisor and round off        */
    temp    = (CPU_CLK_FREQ * 2) / (16 * baud_rate);
    divisor = (temp + 1) / 2 - 1;

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    UBRR0H  = divisor >> 8;
    UBRR0L  = divisor & 0xFF;

    UCSR0A &= ~BIT1;                                 /* DO NOT double the USART transmission speed     */

    UCSR0B  =  BIT7 | BIT4 | BIT3;                   /* Enable USART Rx Complete Interrupt             */
                                                     /* Enable the receiver                            */
                                                     /* Enable the transmitter                         */

    UCSR0C  =  BIT2 | BIT1;                          /* 8 Bits, 1 stop, no parity                      */
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    UBRR1H  = divisor >> 8;
    UBRR1L  = divisor & 0xFF;

    UCSR1A &= ~BIT1;                                 /* DO NOT double the USART transmission speed     */

    UCSR1B  =  BIT7 | BIT4 | BIT3;                   /* Enable USART Rx Complete Interrupt             */
                                                     /* Enable the receiver                            */
                                                     /* Enable the transmitter                         */

    UCSR1C  =  BIT2 | BIT1;                          /* 8 Bits, 1 stop, no parity                      */
#endif
}

void  ProbeRS232_RxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    UCSR0B &= ~BIT7;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    UCSR1B &= ~BIT7;
#endif
}

void  ProbeRS232_RxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    UCSR0B |= BIT7;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    UCSR1B |= BIT7;
#endif
}

void  ProbeRS232_Tx1 (INT8U c)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    UDR0 = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    UDR1 = c;
#endif
}

void  ProbeRS232_TxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    UCSR0B &= ~BIT6;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    UCSR1B &= ~BIT6;
#endif
}

void  ProbeRS232_TxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    UCSR0B |= BIT6;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    UCSR1B |= BIT6;
#endif
}
